# Nexa-net

./: .clippy.toml  .gitignore  Cargo.toml  MEGA_PROMPT.md  PROGRESS.md  README.md  ROADMAP.md  build.rs  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: nexa_bench.rs
config/: nexa-proxy.toml
deployments/database/migrations/: 001_initial_schema.sql
deployments/docker/: Dockerfile  docker-compose.yaml
deployments/docker/config/prometheus/: prometheus.yml
deployments/kubernetes/: nexa-net.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DISCOVERY_LAYER.md  ECONOMY_LAYER.md  GLOSSARY.md  IDENTITY_LAYER.md  INIT_DESIGN.md  NEXA_INTEGRATION.md  PERFORMANCE.md  PROTOCOL_SPEC.md  README.md  ROADMAP.md  SECURITY.md  TRANSPORT_LAYER.md  USER_GUIDE.md
docs/tech_report/: main.tex  references.bib
docs/tech_report/figures/: gen_api_bench.py  gen_discovery_bench.py  gen_economy_bench.py  gen_identity_bench.py  gen_overall_radar.py  gen_security_bench.py  gen_test_coverage.py  gen_transport_bench.py
docs/tech_report/sections/: 01_abstract.tex  02_introduction.tex  03_background.tex  04_architecture.tex  05_identity.tex  06_discovery.tex  07_transport.tex  08_economy.tex  09_proxy.tex  10_security.tex  11_storage.tex  12_testing.tex  13_performance.tex  14_discussion.tex  15_conclusion.tex  16_appendix.tex
examples/: basic_usage.rs  embedding_usage.rs  multi_agent_sim.rs
plans/: ENHANCEMENT_PLAN.md  NEXT_STEPS_PLAN.md  PHASE10_DETAILED_PLAN.md  PHASE11-12_DETAILED_PLAN.md  PHASE9-12_EXECUTION_PLAN.md  REFACTORING_PLAN.md  REMAINING_STAGES_PLAN.md  STAGE2_SCAFFOLDING_PLAN.md  TECH_REPORT_PLAN.md
proptest-regressions/economy/: channel.txt
proptest-regressions/identity/: credential.txt
proto/: discovery.proto  economy.proto  identity.proto  nexa_common.proto  transport.proto
scripts/: download_embedding_model.sh
src/: error.rs  lib.rs  types.rs
src/api/: grpc.rs  mod.rs  rest.rs  sdk.rs
src/discovery/: capability.rs  mod.rs  node_status.rs  router.rs  semantic_dht.rs  vectorizer.rs
src/discovery/embedding/: mock.rs  mod.rs  onnx.rs
src/economy/: budget.rs  channel.rs  mod.rs  receipt.rs  settlement.rs  token.rs
src/identity/: credential.rs  did.rs  did_document.rs  key_management.rs  mod.rs  mtls.rs  resolver.rs  trust_anchor.rs
src/nexa/: dag_executor.rs  mod.rs  network_bridge.rs  runtime.rs
src/protocol/: discovery.rs  economy.rs  identity.rs  message.rs  mod.rs  proto.rs  transport.rs
src/proxy/: client.rs  config.rs  main.rs  mod.rs  server.rs
src/security/: audit.rs  key_rotation.rs  middleware.rs  mod.rs  rate_limit.rs  secure_storage.rs
src/storage/: memory.rs  mod.rs  postgres.rs  redis.rs  rocksdb.rs
src/transport/: connection.rs  error_handler.rs  frame.rs  mod.rs  negotiator.rs  rpc.rs  serialization.rs  stream.rs
tests/: channel_test.rs  discovery_test.rs  e2e_http_test.rs  e2e_test.rs  embedding_test.rs  integration.rs
tests/common/: mod.rs
tests/integration/: channel_test.rs  discovery_test.rs  e2e_test.rs
