[package]
name = "nexa-net"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Nexa-net Team"]
description = "Decentralized M2M communication infrastructure for autonomous agents"
license = "Apache-2.0"
repository = "https://github.com/nexa-net/nexa-net"
readme = "README.md"
keywords = ["agent", "m2m", "decentralized", "network", "rpc"]
categories = ["network-programming", "cryptography", "web-programming"]

[workspace]
members = [
    ".",
]

[dependencies]
# === Async Runtime ===
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"

# === Serialization ===
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# === Compression (real implementations) ===
lz4_flex = "0.11"
flate2 = "1.0"
zstd = "0.13"

# === Cryptography & Security ===
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
hmac = "0.12"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# === TLS / mTLS ===
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rcgen = "0.13"

# === Network & Protocol ===
tonic = "0.10"
tonic-health = "0.10"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }
http-body-util = "0.1"

# === REST API ===
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# === Concurrency ===
dashmap = "6.0"
parking_lot = "0.12"
crossbeam = "0.8"

# === Vector Search ===
rand_distr = "0.4"

# === Storage ===
rocksdb = { version = "0.21", optional = true }

# === Persistent Storage (optional) ===
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# === Embedding (optional) ===
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.15", optional = true }
tokenizers = { version = "0.15", optional = true }

# === Logging & Monitoring ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# === Error Handling ===
thiserror = "1.0"
anyhow = "1.0"

# === Time ===
chrono = { version = "0.4", features = ["serde"] }

# === UUID ===
uuid = { version = "1.0", features = ["v4", "serde"] }

# === HTTP Client (for examples) ===
reqwest = { version = "0.12", features = ["json"] }

# === Configuration ===
config = "0.14"
toml = "0.8"

# === Enum conversions ===
num-derive = "0.4"
num-traits = "0.2"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
tempfile = "3.10"
tokio-test = "0.4"
tower-service = "0.3"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }

[features]
default = []
embedding-onnx = ["ort", "ndarray", "tokenizers"]
storage-rocksdb = ["rocksdb"]
storage-postgres = ["sqlx"]
storage-redis = ["redis"]
storage-full = ["storage-rocksdb", "storage-postgres", "storage-redis"]

[[bin]]
name = "nexa-proxy"
path = "src/proxy/main.rs"

[lib]
name = "nexa_net"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "nexa_bench"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "embedding_usage"
path = "examples/embedding_usage.rs"

[[example]]
name = "multi_agent_sim"
path = "examples/multi_agent_sim.rs"